create request GetSkillByFilters
